--- a/projects.html
+++ b/projects.html
@@ -52,19 +52,23 @@
 
   <!-- App Showcase -->
 <div class="app-container">
-    <h3>App Name 1</h3>
+    <h3>Public Reporting System</h3>
     <div class="app-details">
       <div class="description">
-        <p>Description of App 1.</p>
-        Add more lines of description
+        <p>Introducing PRS (Public Reporting System), a revolutionary platform empowering users in Malaysia to report issues to the nearest authorities effortlessly. From reporting potholes to safety concerns, PRS streamlines the process, ensuring prompt resolution. Here's a glimpse into its features and technologies:</p>
         <ul>
-          <li>Feature 1</li>
-          <li>Feature 2</li>
-          <!-- Add more features -->
+            <li><span class="bold">Programmatic UI:</span> With a focus on flexibility and performance, PRS boasts a fully programmatically designed user interface, offering a seamless experience across devices.</li>
+            <li><span class="bold">Secure Communication with OAuth2:</span> PRS prioritizes user security by implementing OAuth for secure connections, safeguarding sensitive data during transmission.</li>
+            <li><span class="bold">Efficient Data Handling with URLSession and JSONDecoder:</span> PRS optimizes data retrieval and processing using robust APIs like URLSession for seamless network communication and JSONDecoder for efficient parsing of data in JSON format. This ensures swift and accurate transmission of reports, enhancing the overall user experience.</li>
+            <li><span class="bold">Real-Time Tracking with Apple Push Notification and Firebase:</span> Stay informed every step of the way with real-time updates through Apple Push Notification and Firebase integration, keeping users and authorities in the loop throughout the resolution process.</li>
+            <li><span class="bold">Interactive Mapping with MapKit and Google APIs:</span> PRS harnesses the power of MapKit for seamless navigation and location tracking, while Google APIs enhance the user experience with place predictions and precise location fetching, making reporting issues a breeze.</li>
         </ul>
       </div>
       <div class="screenshot">
-        <img src="images/ICON_V3/thumbnail.jpg" alt="App 1 Screenshot">
+        <div class="image-container">
+            <img src="images/PRS/thumbnail.jpg" alt="App 1 Screenshot">
+            <a href="prs.html">More screenshots</a>
+          </div> 
       </div>
     </div>
   </div>
