--- a/projects.html
+++ b/projects.html
@@ -78,24 +78,40 @@
 
   <!-- App Showcase -->
 <div class="app-container">
-    <h3>App Name 1</h3>
+    <h3>ICON v3</h3>
     <div class="app-details">
       <div class="description">
-        <p>Description of App 1.</p>
-        Add more lines of description
+        <p>Introducing ICON V3, a cutting-edge iOS application empowering users to effortlessly control their home products and appliances using iPhones or iPads. As the sole front-end developer of this project, I played a pivotal role in bringing this vision to life. Here are some key features and technologies that power ICON V3:</p>
         <ul>
-          <li>Feature 1</li>
-          <li>Feature 2</li>
-          <!-- Add more features -->
+          <li><span class="bold">Secure Connectivity with OAuth:</span> Prioritizing user security, ICON V3 establishes a secure connection using OAuth, ensuring encrypted and authenticated communication between devices and the application.</li>
+          <li><span class="bold">Efficient Data Retrieval with URLSession:</span> Leveraging URLSession, ICON V3 efficiently fetches data in JSON format from servers, enabling real-time updates and seamless integration of user preferences and device statuses.</li>
+          <li><span class="bold">Flexible UI Design:</span> ICON V3 offers a dynamic user interface crafted both programmatically and with Storyboard, providing a seamless and intuitive experience tailored to user preferences and device capabilities.</li>
+          <li><span class="bold">eal-Time Notifications with Apple Push Notification and Firebase:</span> Stay connected and informed with real-time updates through Apple Push Notification and Firebase integration, enabling timely alerts and notifications for device status changes and user actions.</li>
+          <li><span class="bold">ive CCTV Footage with MobileVLCKit Library:</span> ICON V3 enhances home security and monitoring capabilities by incorporating the MobileVLCKit library, enabling seamless streaming of live footage from CCTV cameras directly to users' devices, ensuring peace of mind and enhanced situational awareness.</li>
         </ul>
       </div>
       <div class="screenshot">
-        <img src="images/ICON_V3/thumbnail.jpg" alt="App 1 Screenshot">
+        <div class="image-container">
+          <img src="images/ICON_V3/thumbnail.jpg" alt="App 1 Screenshot">
+        </div>
       </div>
     </div>
   </div>
   
   <!-- Horizontal line -->
   <hr>
+
+  <!-- Footer -->
+  <footer id="footer">
+    <ul class="icons">
+        <li><a href="https://twitter.com/kasra0000" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a href="https://www.linkedin.com/in/kasra-babaei-5a44b286/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+        <li><a href="kasrababaei[at]gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+    </ul>
+    <ul style="list-style-type:none">
+        <li>Current location: Calgary, Canada</li>
+    </ul>
+    <p class="copyright">&copy; 2024 Kasra Babaei.</p>
+  </footer>
 </body>
 </html>
