Minor copy changes

--- a/projects.html
+++ b/projects.html
@@ -35,12 +35,12 @@
             <li><span class="bold">Programmatic UI:</span> Crafted with precision, 90% of the app's user interface is meticulously designed and implemented programmatically, ensuring flexibility and performance.</li>
             <li><span class="bold">Dynamic Data Retrieval:</span> Leveraging the power of JSON format, product data is fetched from the server and seamlessly integrated into the app using JSDONDecoder, ensuring real-time updates and a smooth browsing experience.</li>
             <li><span class="bold">Persistent Storage with CoreData:</span> Utilizing CoreData, the app securely stores all item details and user-selected favorites, providing a seamless and personalized experience across sessions.</li>
-            <li><span class="bold">Efficient Image Caching:</span> Images are intelligently cached on the device, eliminating redundant downloads and optimizing performance, ensuring swift and responsive image loading throughout the app.</li>
+            <li><span class="bold">Efficient Image Caching:</span> Instead of depending on third party frameworks, implemented a lightweight caching logic. Images are intelligently cached on the device, eliminating redundant downloads and optimizing performance, ensuring swift and responsive image loading throughout the app.</li>
         </ul>
       </div>
       <div class="screenshot">
         <div class="image-container">
-          <img src="images/ICON_V3/thumbnail.jpg" alt="App 1 Screenshot">
+          <img src="images/VC/thumbnail.jpg" alt="App 1 Screenshot">
           <a href="vcapp.html">More screenshots</a>
         </div> 
       </div>
@@ -78,7 +78,7 @@
 
   <!-- App Showcase -->
 <div class="app-container">
-    <h3>ICON v3</h3>
+    <h3>ICON V3</h3>
     <div class="app-details">
       <div class="description">
         <p>Introducing ICON V3, a cutting-edge iOS application empowering users to effortlessly control their home products and appliances using iPhones or iPads. As the sole front-end developer of this project, I played a pivotal role in bringing this vision to life. Here are some key features and technologies that power ICON V3:</p>
