--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div>
 		<p>Meet the man behind the code: part-time comedian to a captivatingly stubborn red Pembroke Welsh Corgi named Ginger, full-time iOS developer, and master of multitasking between family and Swift syntax.</p>
 		<p>My iOS journey began in 2013 when I had to make a walking app for my Masters project. Learning Objective-C in just three months was tough, but I fell in love with app development right away.</p>
-		<p>After graduation, I made an expense-tracking app called "My Cost". I managed it for a while until I decided to pursue a Ph.D. in computer science, focusing on finding anomalies in big data with neural networks.</p>
+		<p>After graduation, I made an expense-tracking app called "My Cost". I maintained it for a while until I decided to pursue a Ph.D. in computer science, focusing on finding anomalies in big data with neural networks.</p>
 		<p>Throughout my tenure as a freelance iOS developer, I had the privilege of collaborating with various companies, taking <a href="projects.html">projects</a> from conception to completion. Each app listed below represents a culmination of my skills, creativity, and dedication to delivering high-quality mobile experiences. While I've moved on from contractor work, the responsibility for maintaining these apps now rests with other developers.</p>
 		<p>In 2020, I made the leap to become a full-time iOS developer and joined Neo Financial, a company dedicated to revolutionizing the banking experience for Canadians.</p>
 	</div>
