--- a/projects/iconv3.html
+++ b/projects/iconv3.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Projects - Kasra Babaei</title>
-  <link rel="stylesheet" href="assets/css/grid.css">
-  <link rel="stylesheet" href="assets/css/swift.css">
+  <link rel="stylesheet" href="../assets/css/grid.css">
+  <link rel="stylesheet" href="../assets/css/swift.css">
 </head>
 <body>
   <header id="banner">
@@ -13,8 +13,8 @@
         <div class="left">
             <nav>
                 <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../projects.html#app-icon-v3">Projects</a></li>
                 </ul>
             </nav>
         </div>
@@ -28,33 +28,13 @@
 <!-- The four columns -->
 <div class="row" style="text-align:center">
   <div class="column">
-    <img src="images/PRS/1.jpg" alt="Home" style="height:15vh" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="images/PRS/2.jpg" alt="Tiles" style="height:15vh" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="images/PRS/3.jpg" alt="Single_tile_details" style="height:15vh" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="images/PRS/4.jpg" alt="Posting" style="height:15vh" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="images/PRS/5.jpg" alt="Upload" style="height:15vh" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="images/PRS/6.jpg" alt="Onboarding" style="height:15vh" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="images/PRS/7.jpg" alt="Category" style="height:15vh" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="images/PRS/8.jpg" alt="MapView" style="height:15vh" onclick="myFunction(this);">
+    <img src="../images/ICON_V3/1.jpg" alt="Home" style="height:15vh" onclick="myFunction(this);">
   </div>
 </div>
 
 <div class="container" style="text-align:center">
-  <img id="expandedImg" style="height:50em">
+  <img id="expandedImg" style="height:80vh">
+  <div id="imgtext"></div>
 </div>
 
 <script>
