--- a/projects/vcapp.html
+++ b/projects/vcapp.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Projects - Kasra Babaei</title>
-  <link rel="stylesheet" href="assets/css/grid.css">
-  <link rel="stylesheet" href="assets/css/swift.css">
+  <link rel="stylesheet" href="../assets/css/grid.css">
+  <link rel="stylesheet" href="../assets/css/swift.css">
 </head>
 <body>
   <header id="banner">
@@ -13,8 +13,8 @@
         <div class="left">
             <nav>
                 <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../projects.html#app-vc">Projects</a></li>
                 </ul>
             </nav>
         </div>
@@ -28,13 +28,24 @@
 <!-- The four columns -->
 <div class="row" style="text-align:center">
   <div class="column">
-    <img src="images/ICON_V3/1.jpg" alt="Home" style="height:15vh" onclick="myFunction(this);">
+    <img src="../images/VC/1.jpg" alt="Home" style="height:20vh" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="../images/VC/2.jpg" alt="Tiles" style="height:20vh" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="../images/VC/3.jpg" alt="Single_tile_details" style="height:20vh" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="../images/VC/4.jpg" alt="Favourites" style="height:20vh" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="../images/VC/5.jpg" alt="ContactUs" style="height:20vh" onclick="myFunction(this);">
   </div>
 </div>
 
-<div class="container" style="text-align:center">
-  <img id="expandedImg" style="height:80vh">
-  <div id="imgtext"></div>
+<div class="image-container" style="text-align:center">
+  <img id="expandedImg" style="height:50em">
 </div>
 
 <script>
