Added images for Neo

--- a/projects/neo.html
+++ b/projects/neo.html
@@ -28,7 +28,17 @@
 <!-- The four columns -->
 <div class="row" style="text-align:center">
   <div class="column">
-    <img src="../images/ICON_V3/1.jpg" alt="Home" style="height:15vh" onclick="myFunction(this);">
+    <img src="../images/Neo/home-tab.jpg" alt="Home" style="height:15vh" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+    <img src="../images/Neo/investment.jpg" alt="Home" style="height:15vh" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+    <img src="../images/Neo/rewards.jpg" alt="Home" style="height:15vh" onclick="myFunction(this);">
+    </div>
+    <div class="column">
+    <img src="../images/Neo/card.jpg" alt="Home" style="height:15vh" onclick="myFunction(this);">
+    </div>
   </div>
 </div>
 
