Added a footer and 2024 Contributions

--- a/about/index.html
+++ b/about/index.html
@@ -31,11 +31,44 @@
     <h1>Meet the man behind the code</h1>
     
   </header>
-  <p>I&rsquo;m a part-time comedian to a captivatingly stubborn red Pembroke Welsh Corgi named Ginger, full-time iOS developer, and master of multitasking between family and Swift syntax.
-My iOS journey began in 2013 when I had to make a walking app for my Masters project. Learning Objective-C in just three months was tough, but I fell in love with app development right away.
-After graduation, I made an expense-tracking app called &ldquo;My Cost&rdquo;. I maintained it for a while until I decided to pursue a Ph.D. in computer science, focusing on finding anomalies in big data with neural networks.
-Throughout my tenure as a freelance iOS developer, I had the privilege of collaborating with various companies, taking <a href="/projects/">projects</a> from conception to completion. Each app listed below represents a culmination of my skills, creativity, and dedication to delivering high-quality mobile experiences. While I&rsquo;ve moved on from contractor work, the responsibility for maintaining these apps now rests with other developers.
-In 2020, I made the leap to become a full-time iOS developer and joined Neo Financial, a company dedicated to revolutionizing the banking experience for Canadians.</p>
+  <!-- markdownlint-disable no-inline-html -->
+<div class="inline-content">
+<p>I&rsquo;m a part-time comedian to a captivating stubborn red Pembroke Welsh Corgi
+named Ginger, full-time iOS developer, and master of multitasking between
+family and Swift syntax.</p>
+<img src="/images/Ginger.jpg" alt="Ginger">
+<p>My journey as an iOS developer began in 2013 when I had to make an app for
+pedestrians with routing features as part of my Masters project.
+Learning Objective-C in just three months was tough, but I fell in
+love with app development right away.</p>
+<p>After graduation, I made an expense-tracking app called &ldquo;My Cost&rdquo;. I maintained
+it for a while until I decided to pursue a Ph.D. in Computer Science, focusing
+on finding anomalies in big data using neural networks.</p>
+<p>Throughout my tenure as a freelance iOS developer, I had the privilege of
+collaborating with various companies, taking <a href="/projects/">projects</a> from
+conception to completion. Each app <a href="/projects/">listed</a> represents a culmination
+of my skills, creativity, and dedication to delivering high-quality mobile
+experiences. While I&rsquo;ve moved on from contractor work, the responsibility for
+maintaining these apps now rests with other developers.</p>
+<p>In 2020, I made the leap to become a full-time iOS developer and joined
+<a href="https://www.neofinancial.com">Neo Financial</a>, a company dedicated to
+revolutionizing the banking experience for Canadians. After almost five
+years, in 2025, I decided to seek a new challenge; therefore, joined the Platform
+team at <a href="https://www.thescore.com">theScore</a>.</p>
+</div>
+
+  <div class="footer">
+<ul class="icons">
+    <li><a href="https://github.com/kasrababaei" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+    <li><a href="https://twitter.com/kasra0000" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+    <li><a href="https://www.linkedin.com/in/kasra-babaei-5a44b286/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+</ul>
+<ul class="icons">
+    <li>Copyright <span class="fa-regular fa-copyright"></span> 2024 - 2024, Kasra Babaei</li>
+</ul>
+</div>
+</body>
+</html>
 
 </article>
 
