--- a/projects/index.html
+++ b/projects/index.html
@@ -87,6 +87,19 @@
 <li>Live CCTV Footage with MobileVLCKit Library: ICON V3 enhances home security and monitoring capabilities by incorporating the MobileVLCKit library, enabling seamless streaming of live footage from CCTV cameras directly to users&rsquo; devices, ensuring peace of mind and enhanced situational awareness.</li>
 </ul>
 
+  <div class="footer">
+<ul class="icons">
+    <li><a href="https://github.com/kasrababaei" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+    <li><a href="https://twitter.com/kasra0000" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+    <li><a href="https://www.linkedin.com/in/kasra-babaei-5a44b286/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+</ul>
+<ul class="icons">
+    <li>Copyright <span class="fa-regular fa-copyright"></span> 2024 - 2024, Kasra Babaei</li>
+</ul>
+</div>
+</body>
+</html>
+
 </article>
 
 
